--- a/week02_autodiff/homework.ipynb
+++ b/week02_autodiff/homework.ipynb
@@ -493,14 +493,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(4681, 784)\n"
+            "(4681, 784)\n",
+            "6\n"
           ]
         }
       ],
@@ -520,14 +521,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [],
       "source": [
         "class NotMNISTDataset(Dataset):\n",
-        "    def __init__(self, data, labels):\n",
+        "    def __init__(self, data, labels, letter_sequence):\n",
         "        self.data = data\n",
         "        self.labels = labels\n",
+        "        self.classes = {i: letter_sequence[i] for i in range(len(letter_sequence))}\n",
         "    def __len__(self):\n",
         "        return len(self.data)\n",
         "    def __getitem__(self, index):\n",
@@ -538,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 125,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -547,12 +549,14 @@
       "outputs": [],
       "source": [
         "train_set = NotMNISTDataset(data=torch.from_numpy(X_train),\n",
-        "                            labels=torch.from_numpy(y_train).type(torch.LongTensor))\n",
+        "                            labels=torch.from_numpy(y_train).type(torch.LongTensor),\n",
+        "                            letter_sequence='ABCDEFGHIJ')\n",
         "train_dataloader = DataLoader(dataset=train_set,\n",
         "                              batch_size=BATCH_SIZE,\n",
         "                              shuffle=True)\n",
         "test_set = NotMNISTDataset(data=torch.from_numpy(X_test),\n",
-        "                           labels=torch.from_numpy(y_test).type(torch.LongTensor))\n",
+        "                           labels=torch.from_numpy(y_test).type(torch.LongTensor),\n",
+        "                           letter_sequence='ABCDEFGHIJ')\n",
         "test_dataloader = DataLoader(dataset=test_set,\n",
         "                             batch_size=BATCH_SIZE,\n",
         "                             shuffle=False)"
@@ -560,18 +564,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 126,
       "metadata": {},
       "outputs": [
         {
-          "ename": "AttributeError",
-          "evalue": "'NotMNISTDataset' object has no attribute 'classes'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtrain_set\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclasses\u001b[49m)\n",
-            "\u001b[1;31mAttributeError\u001b[0m: 'NotMNISTDataset' object has no attribute 'classes'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0: 'A', 1: 'B', 2: 'C', 3: 'D', 4: 'E', 5: 'F', 6: 'G', 7: 'H', 8: 'I', 9: 'J'}\n"
           ]
         }
       ],
@@ -696,13 +696,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 119,
       "metadata": {},
       "outputs": [
@@ -790,6 +783,52 @@
         "              loss_fn=loss_fn,\n",
         "              accuracy_fn=accuracy_fn,\n",
         "              device=device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 120,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def make_predictions(model:torch.nn.Module,\n",
+        "                     data: list,\n",
+        "                     device: torch.device = device):\n",
+        "    pred_probs = []\n",
+        "    model.eval()\n",
+        "    with torch.inference_mode():\n",
+        "        for sample in data:\n",
+        "            \n",
+        "            # Forward pass (model outputs raw logit)\n",
+        "            pred_logit = model(sample)\n",
+        "            \n",
+        "            # Get prediction probability (logit -> prediction probability)\n",
+        "            pred_prob = torch.softmax(pred_logit, dim=0)\n",
+        "            \n",
+        "            pred_probs.append(pred_prob)\n",
+        "    # Stack the pred_probs to turn list into a tensor\n",
+        "    return torch.stack(pred_probs) \n",
+        "            "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import random\n",
+        "class_names = train_set.classes\n",
+        "test_samples = []\n",
+        "test_labels = []\n",
+        "for sample, label in random.sample(list(test_set))"
       ]
     },
     {
